--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Православный wap</title>
 <meta  charset="utf-8">
 <link rel="icon" type="image/png" href="/favicon.png">
-<link rel="stylesheet" type="text/css" href="/style.css">
+<link rel="stylesheet" type="text/css" href="/sis/style.css">
 </head>
 
 <body>
