--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 <div style="text-align:center; margin-top:50px; font-size:33px; color:#000080">
 wap mail
 </div>
+  
+ <div class="news">
+ Сей час Рождественский Постъ!
+ <div>
+
+ <div class="div">
+Что такое пост? — 
+Любой Вам скажет без сомнения:
+Это воздержание от пищи,
+и от бесполезного общения.
+
+Вот таков и этот пост —
+Рождественским зовётся,
+В честь Господа Иисуса Рождества
+С древних пор всегда блюдётся.
+<div>
 
 </body>
 </html>
