--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ wap mail
   
  <div class="news">
  Сей час Рождественский Постъ!
- <div>
+ </div>
 
  <div class="div">
 Что такое пост? — 
@@ -28,7 +28,7 @@ wap mail
 Рождественским зовётся,
 В честь Господа Иисуса Рождества
 С древних пор всегда блюдётся.
-<div>
+</div>
 
 </body>
 </html>
