--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@ wap mail
 </div>
   
  <div class="news">
- Сей час Рождественский Постъ!
+ Сей час <b>Рождественский Постъ</b>!
  </div>
 
  <div class="div">
-Что такое пост? — 
-Любой Вам скажет без сомнения:
-Это воздержание от пищи,
-и от бесполезного общения.
+Что такое пост? — <br> 
+Любой Вам скажет без сомнения:<br> 
+Это воздержание от пищи,<br> 
+и от бесполезного общения.<br> 
 
-Вот таков и этот пост —
-Рождественским зовётся,
-В честь Господа Иисуса Рождества
-С древних пор всегда блюдётся.
+Вот таков и этот пост —<br> 
+Рождественским зовётся,<br> 
+В честь Господа Иисуса Рождества<br> 
+С древних пор всегда блюдётся.<br> 
 </div>
 
 </body>
