--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <div style="text-align:center; margin-top:50px; font-size:33px; color:#000080">
 wap mail
 </div>
+
+  <h1>Почта<img src="/img/mail.svg" alt="+">wapmail.ml</h1>
   
  <div class="news">
  Сей час <b>Рождественский Постъ</b>!
