--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 wap mail
 </div>
 
-  <h1>Почта<img src="/img/mail.svg" alt="+">wapmail.ml</h1>
+  <h1>Почта<img src="/img/email.svg" alt="+">wapmail.ml</h1>
   
  <div class="news">
  Сей час <b>Рождественский Постъ</b>!
