--- a/str/copyleft/index.html
+++ b/str/copyleft/index.html
@@ -7,21 +7,24 @@
 <link rel="icon" type="image/png" href="/favicon.png">
 <link rel="stylesheet" type="text/css" href="/sis/style.css">
 </head>
-
 <body>
+<div>
+<main>
 
 <h1>CopyLeft</h1>
 
 Это значит нет никаких авторских прав.
 <br><br>
 Почта <br>
-<b> oleg<img src="/img/email.svg" alt="+">Otradaamen.ru</b>
+<b> admin<img src="/img/email.svg" alt="+">wapmail.ml</b>
 <br><br>
 Прочитаю всё что напишите.
 <br><br>
 <p>Прошу Вас помянуть в Ваших Православных молитвах о избавлении Олега от многих пагубных страстей, а также могу и сам Вас помянуть на утреннем правиле о здравии и (или) о упокоении Ваших близких и (или) ближних, один раз в ответ на одно письмо. Пишите имена и требы, единственное условие это обязательно Вы и сами молитесь за всех Ваших.</p>
 <br><br>
 
+</main>
+</div>
 </body>
 </html>
 
