--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <link rel="icon" type="image/png" href="/favicon.png">
 <link rel="stylesheet" type="text/css" href="/sis/style.css">
 </head>
-
 <body>
+<div>
+<main>
 
 <div style="text-align:center; margin-top:50px; font-size:33px; color:#000080">
 wap mail
@@ -32,5 +33,8 @@ wap mail
 С древних пор всегда блюдётся.<br> 
 </div>
 
+</main>
+</div>
 </body>
 </html>
+
