--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@ wap mail
 </div>
 
 </main>
+
+<footer>
+<div class="foot">
+<a href="/str/copyleft/">CopyLeftъ</a> 
+</div>
+</footer>
+
 </div>
 </body>
 </html>
