--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div>
 <main>
 
-<div style="text-align:center; margin-top:50px; font-size:33px; color:#000080">
+<header>
 wap mail
-</div>
+</header>
 
   <h1>Почта<img src="/img/email.svg" alt="+">wapmail.ml</h1>
   
