--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>wap</title>
+<title>Wap Mail</title>
 <meta  charset="utf-8">
 <link rel="icon" type="image/png" href="/favicon.png">
 <link rel="stylesheet" type="text/css" href="/sis/style.css">
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-wap mail
+<a href="/"><img src="/img/logo.png" alt="WapMail"></a>
 </header>
 
 <div>
