--- a/str/copyleft/index.html
+++ b/str/copyleft/index.html
@@ -2,12 +2,17 @@
 <html lang="ru">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>wap</title>
+<title>Wap Mail</title>
 <meta  charset="utf-8">
 <link rel="icon" type="image/png" href="/favicon.png">
 <link rel="stylesheet" type="text/css" href="/sis/style.css">
 </head>
 <body>
+
+<header>
+<a href="/"><img src="/img/logo.png" alt="WapMail"></a>
+</header>
+
 <div>
 <main>
 
@@ -25,6 +30,14 @@
 
 </main>
 </div>
+
+<footer>
+<div class="foot">
+<a href="/">Главъ</a> <br>
+<a href="/str/copyleft/">CopyLeftъ</a> 
+</div>
+</footer>
+
 </body>
 </html>
 
