--- a/str/403/index.html
+++ b/str/403/index.html
@@ -10,9 +10,13 @@
 
 <body>
 
-<h1>Ошибка 403</h1>
+<div style="margin-top:50px; font-size:24px; padding:25px; text-align:center;">
+Ошибка 403
+</div>
 
 Простите это запрещено.
+<br><br>
+<a href="/">Главъ</a>
 
 </body>
 </html>
