--- a/str/404/index.html
+++ b/str/404/index.html
@@ -10,9 +10,13 @@
 
 <body>
 
-<h1>Ошибка 404</h1>
+<div style="margin-top:50px; font-size:24px; padding:25px; text-align:center;">
+Ошибка 404
+</div>
 
 Простите это не найдено.
+<br><br>
+<a href="/">Главъ</a>
 
 </body>
 </html>
