--- a/str/403/index.html
+++ b/str/403/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<div>
 
 <div style="margin-top:50px; font-size:24px; padding:25px; text-align:center;">
 Ошибка 403
@@ -18,5 +19,6 @@
 <br><br>
 <a href="/">Главъ</a>
 
+</div>
 </body>
 </html>
