--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
  </div>
 
  <div class="div">
-Что такое пост? — <br> 
-Любой Вам скажет без сомнения:<br> 
-Это воздержание от пищи,<br> 
-и от бесполезного общения.<br> 
-
-Вот таков и этот пост —<br> 
-Рождественским зовётся,<br> 
-В честь Господа Иисуса Рождества<br> 
-С древних пор всегда блюдётся.<br> 
+Что такое пост вообще? —<br>
+Любой Вам скажет без сомнения:<br>
+Это воздержание от пищи и пития,<br>
+и от бесполезного общения.<br>
+Вот таков и этот пост —<br>
+Рождественским зовётся,<br>
+В честь Господа Иисуса Христа Рождества<br>
+С древних пор всегда блюдётся.
 </div>
 
 </main>
