--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
  </div>
 
  <div class="div">
-Что такое пост вообще? —<br>
-Любой Вам скажет без сомнения:<br>
-Это воздержание от пищи и пития,<br>
-и от бесполезного общения.<br>
+А что такое пост вообще? —<br>
+Скажу Вам сразу без сомнения:<br>
+что это воздержание от пищи и пития,<br>
+а также и от бесполезного общения.<br>
 Вот таков и этот пост —<br>
 Рождественским зовётся,<br>
 В честь Господа Иисуса Христа Рождества<br>
