--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 С древних пор всегда блюдётся.
 </div>
 
+<video width="240" height="320" controls>
+  <source src="vid.mp4" type="video/mp4">
+</video>
+
 </main>
 </div>
 
