--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 С древних пор всегда блюдётся.
 </div>
 
-<video width="240" height="320" controls>
+<br><video width="200" height="300" controls>
   <source src="vid.mp4" type="video/mp4">
-</video>
+</video><br>
 
 </main>
 </div>
