--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
 С древних пор всегда блюдётся.
 </div>
 
-<br><video width="200" height="300" controls>
+<br>
+<video width="200" height="300" controls>
   <source src="vid.mp4" type="video/mp4">
-</video><br>
+</video> 
+<video width="200" height="300" controls>
+  <source src="vid1.mp4" type="video/mp4">
+</video> 
+<a href="/vid.gif"><img src="/vid.gif" alt="gif"></a>
+<br>
 
 </main>
 </div>
