--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 <br>
 <video width="200" height="300" controls>
   <source src="vid.mp4" type="video/mp4">
-</video> 
+</video> &nbsp; &nbsp; 
 <video width="200" height="300" controls>
   <source src="vid1.mp4" type="video/mp4">
 </video> 
+<br>
 <a href="/vid.gif"><img src="/vid.gif" alt="gif"></a>
 <br>
 
