--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
  Сей час <b>Рождественский Постъ</b>!
  </div>
 
- <div class="div">
+<div class="div">
+<a href="/vid.gif"><img src="/vidmin.gif" alt="gif" style="float:left; margin:10px 20px 5 px 10px"></a>
 А что такое пост вообще? —<br>
 Скажу Вам сразу без сомнения:<br>
 что это воздержание от пищи и пития,<br>
@@ -40,9 +41,6 @@
 <video width="200" height="300" controls>
   <source src="vid1.mp4" type="video/mp4">
 </video> 
-<br>
-<a href="/vid.gif"><img src="/vid.gif" alt="gif"></a>
-<br>
 
 </main>
 </div>
