--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  </div>
 
 <div class="div">
-<a href="/vid.gif"><img src="/vidmin.gif" alt="gif" style="float:left; margin:10px 20px 5 px 10px"></a>
+<a href="/vid.gif"><img src="/vidmin.gif" alt="gif" style="float:left; margin:10px 20px 5px"></a>
 А что такое пост вообще? —<br>
 Скажу Вам сразу без сомнения:<br>
 что это воздержание от пищи и пития,<br>
