--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
   <source src="vid1.mp4" type="video/mp4">
 </video> 
 
+ <div class="div">
+<a href="http://r90668t9.beget.tech">Стена</a>
+ </div
+  
 </main>
 </div>
 
