--- a/index.html
+++ b/index.html
@@ -1,61 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Wap Mail</title>
-<meta  charset="utf-8">
-<link rel="icon" type="image/png" href="/favicon.png">
-<link rel="stylesheet" type="text/css" href="/sis/style.css">
+<head>
+<meta http-equiv="refresh" content="1;URL=http://otradaamen.ru">
 </head>
-<body>
+</head>
 
-<header>
-<a href="/"><img src="/img/logo.png" alt="WapMail"></a>
-</header>
-
-<div>
-<main>
-
-<h1>Почта<img src="/img/email.svg" alt="+">wapmail.ml</h1>
-  
- <div class="news">
- Сей час <b>Рождественский Постъ</b>!
- </div>
-
-<div class="div">
-<a href="/vid.gif"><img src="/vidmin.gif" alt="gif" style="float:left; margin:10px 20px 5px"></a>
-А что такое пост вообще? —<br>
-Скажу Вам сразу без сомнения:<br>
-что это воздержание от пищи и пития,<br>
-а также и от бесполезного общения.<br>
-Вот таков и этот пост —<br>
-Рождественским зовётся,<br>
-В честь Господа Иисуса Христа Рождества<br>
-С древних пор всегда блюдётся.
-</div>
-
-<br>
-<video width="200" height="300" controls>
-  <source src="vid.mp4" type="video/mp4">
-</video> &nbsp; &nbsp; 
-<video width="200" height="300" controls>
-  <source src="vid1.mp4" type="video/mp4">
-</video> 
-
- <div class="div">
-<a href="http://r90668t9.beget.tech">Стена</a>
-  </div>
-  
-</main>
-</div>
-
-<footer>
-<div class="foot">
-<a href="/str/copyleft/">CopyLeftъ</a> 
-</div>
-</footer>
-
-<img src="//counter.yadro.ru/hit?t25.4;r" alt="+">
+ <body>
 
 </body>
 </html>
